@@ -1,10 +1,14 @@
+TODO
+- Finish early in detection if search param found
+##################################################################
 v0.1.3 - Event Logging 
     - Commit: 
     x Add Logs for sending/receiving 
     x Prompt name and timeout on first use (no ~/.dali file yet)
     x Filesize string (Kb, Mb instead of bytes)
     x Rename destination path if file exists (suffix _N)
-    - Send auto option (autosend if 1)
+    x Open overwrite flag
+    x Send auto option (autosend if 1)
     - Check if can prio IP based on profile (e.g. LAN, WiFi)
     - View logs
     - Log filters (action, date, from, to, file regexp)
